

# Changes to existing features:
* Chiseled Polished Bystone and Byslate are now craftable.
* Ancient Hooks are now craftable.
* Verdigris Ingots are now craftable.
* Alpha Moss Blocks are now bonemealable.
* Underhang water color has been adjusted.
* Underhang ambience now plays 50% less of the time.
* Copperbugs, Pests, and Trilobites are now considered "Arthopods".
* Claystone Farmland is now hydratable by Water.
* Sprinkler now bonemeals crop randomly 20% less.
* Pests now consume crops 50% more.
* Big Beaks now have a health range of 5 - 7 hearts.
* Mossy Claystone now boosts Sniffer eggs hatch rates.
* Glow Gourd Vines are now obtainable in Survival via Shears.
* Montsechia texture has been changed.
* Montsechia now crafts into White Dye instead of Light Blue Dye.
* Creosote and Creosote Sprout textures have been changed.
* Creosote and Creosote Sprouts now generate in the Primordial Ocean.
* Byslate no longer requires iron tools to break.
* Removed Umber.
* Removed Umber Bricks.


# Bugs fixed:
* Fixed crash related to mixins clashing!
* Fixed crash related to Mooboos in the Bygone!
* Fixed both Polished Bystone and Polished Byslate family of blocks from not having stonecutter recipes!
* Fixed Big Beak subtitles not being translated!
* Fixed Big Beaks model from overlapping!
* Fixed Shelfhollows biome name not being translated!
* Fixed a specific fossil generating one block in the air.
* Fixed Whirliweeds not being "replaceable".
* Fixed numerous tags from being broken.
* Fixed numerous broken stonecutter recipes for Byslate and Bystone (All types).
* Fixed multiple Bygone mobs having "lag" between movements.
* Fixed Underhang Vines popping out Glowstone when right-clicked.
* Fixed multiple blocks like the Glow Gourds and Dangos from having broken block breaking particles.
* Fixed Bygone Portal blocks not shattering when the Bygone Portal Frame is broken.
* Fixed "Bygone: Strippables registered!" appearing in the log.