@@ -1,0 +1,17 @@
+{
+  "type": "minecraft:fishing",
+  "pools": [
+    {
+      "bonus_rolls": 0.0,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "bygone:coelacanth",
+          "weight": 60
+        }
+      ],
+      "rolls": 1.0
+    }
+  ],
+  "random_sequence": "bygone:gameplay/fishing/fish"
+}
